    * IMPORTANT: 'wildoptions' option was removed. Completions are sorted automatically now,
      and 'autocomplete' is the new option for the removed 'wildoptions=auto'
    * IMPORTANT: We automatically list completions as you type now. If you have a slow computer,
      you might want to :set noautocomplete
    * Many small fixes for Firefox4 changes
    * Lots of restyled content and changed colors
    * gu works now better for urls with anchors and GET arguments (like url.com/file?query=foo#anchor)
    * :bmarks and :history commands support multiple space separated filter entries and
      match them on both URL and title. Multi filter highlighting for results in
      the URL and title fields.
    * remove "URL (additional)" entries from the search results. Only list urls which
      match either the url or description
    * :bmarks -k[eyword] to search bookmarks by a keyword
    * Some colors have changed their default values (like InfoMsg and ModeMsg)
    * Pressing Escape now clears any previous command output. Scrolling the web page, however, does NOT
      not clear it anymore (as it used to do)
    * History, bookmarks and :open output limit the width of the URL column to 50% so you can
      always see (and interact with hints) the title column as well
    * Better escape certain characters when yanking links to improve pasting in other applications
    * :dialog passwords
    * Fix hints display on some pages like stackoverflow (thanks Jez)
    * Fix relative paths in :cd
    * Support rich text editor written by HTML.
      mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
      And update map [m]i[m]: into be editing mode if editable otherwise CARET mode.
    * Strings starting with a "." are no longer treated as urls by :open et.al.
    * add *-javascript* flag to [c]:abbreviate[c], [c]:iabbrev[c] and [c]:cabbrev[c].
    * :history -remove , remove history items by name/tags/url (only by date with :sanitize).