@@ -16,47 +16,6 @@
         <!-- No white space. The table is white-space: pre; :( -->
         <content><html:span class="td-strut"/><html:span class="td-span"><children/></html:span></content>
     </binding>
-    <binding id="tab" display="xul:hbox"
-             extends="chrome://global/content/bindings/tabbox.xml#tab">
-        <content chromedir="ltr" closetabtext="Close Tab">
-            <xul:stack class="tab-icon liberator-tab-stack">
-                <xul:image xbl:inherits="validate,src=image" class="tab-icon-image" liberator:highlight="TabIcon"/>
-                <xul:vbox>
-                    <xul:spring flex="1"/>
-                    <xul:label xbl:inherits="value=ordinal" liberator:highlight="TabIconNumber"/>
-                    <xul:spring flex="1"/>
-                </xul:vbox>
-            </xul:stack>
-            <xul:label xbl:inherits="value=ordinal" liberator:highlight="TabNumber"/>
-            <xul:label flex="1" xbl:inherits="value=label,crop,accesskey" class="tab-text" liberator:highlight="TabText"/>
-            <xul:toolbarbutton anonid="close-button" tabindex="-1" class="tab-close-button" liberator:highlight="TabClose"/>
-        </content>
-    </binding>
-    <binding id="tab-mac"
-             extends="chrome://browser/content/tabbrowser.xml#tabbrowser-tab">
-        <content chromedir="ltr" closetabtext="Close Tab">
-            <xul:hbox class="tab-image-left" xbl:inherits="selected"/>
-            <xul:hbox class="tab-image-middle" flex="1" align="center" xbl:inherits="selected">
-                <xul:stack class="tab-icon liberator-tab-stack">
-                    <xul:image xbl:inherits="validate,src=image" class="tab-icon-image"/>
-                    <xul:image class="tab-extra-status"/>
-                    <xul:vbox>
-                        <xul:spring flex="1"/>
-                        <xul:label xbl:inherits="value=ordinal" liberator:highlight="TabIconNumber"/>
-                        <xul:spring flex="1"/>
-                    </xul:vbox>
-                </xul:stack>
-                <xul:stack class="tab-text-stack">
-                    <xul:label xbl:inherits="value=ordinal" class="tab-text" liberator:highlight="TabNumber"/>
-                </xul:stack>
-                <xul:stack class="tab-text-stack" flex="1">
-                    <xul:label flex="1" xbl:inherits="value=label,crop,accesskey" crop="right" class="tab-text"/>
-                </xul:stack>
-            </xul:hbox>
-            <xul:toolbarbutton anonid="close-button" tabindex="-1" class="tab-close-button"/>
-            <xul:hbox class="tab-image-right" xbl:inherits="selected"/>
-        </content>
-    </binding>
 </bindings>
 
 <!-- vim:se ft=xbl sw=4 sts=4 tw=0 et: -->
