@@ -75,16 +75,7 @@ Highlights.prototype.CSS = <><![CDATA[
 
     StatusLine  color: gray; background: transparent; font-weight: normal;
 
-    TabClose,.tab-close-button
-    TabIcon,.tab-icon
-    TabText,.tab-text
     TabNumber      font-weight: bold; margin: 0px; padding-right: .3ex;
-    TabIconNumber {
-        font-weight: bold;
-        color: white;
-        text-align: center;
-        text-shadow: black -1px 0 1px, black 0 1px 1px, black 1px 0 1px, black 0 -1px 1px;
-    }
 
     Title       color: magenta; background: white; font-weight: bold;
     URL         text-decoration: none; color: green;
