@@ -19,6 +19,7 @@ Inactive/former developers:
   * Ted Pavlic <ted@tedpavlic.com>
 
 Patches (in no special order and unfortunately incomplete):
+  * Rogutės Sparnuotos (CSS based idea for numbered tabs)
   * Jez <jezreel@gmail.com>
   * Ruud Grosmann ('followhints' option)
   * Xie&Tian (multibyte support for hints, doc fixes)
